<resources>
    <string name="app_name">APP Pupuseria</string>
    <string name="title_activity_administrador_menu">AdministradorMenuActivity</string>
    <string name="title_activity_tienda_menu">TiendaMenuActivity</string>
    <string name="title_activity_producto_menu">ProductoMenuActivity</string>
    <string name="title_activity_administrador_insertar">AdministradorInsertarActivity</string>
    <string name="title_activity_administrador_eliminar">AdministradorEliminarActivity</string>
    <string name="title_activity_administrador_actualizar">AdministradorActualizarActivity</string>
    <string name="title_activity_administrador_consultar">AdministradorConsultarActivity</string>
    <string name="title_activity_tienda_insertar">TiendaInsertarActivity</string>
    <string name="title_activity_tienda_eliminar">TiendaEliminarActivity</string>
    <string name="title_activity_tienda_actualizar">TiendaActualizarActivity</string>
    <string name="title_activity_tienda_consultar">TiendaConsultarActivity</string>
    <string name="title_activity_producto_insertar">ProductoInsertarActivity</string>
    <string name="title_activity_producto_eliminar">ProductoEliminarActivity</string>
    <string name="title_activity_producto_actualizar">ProductoActualizarActivity</string>
    <string name="title_activity_producto_consultar">ProductoConsultarActivity</string>
    <string name="administrador_menu">Funcion a ejecutar Administrador</string>
    <string name="tienda_menu">Funcion a ejecutar Tienda</string>
    <string name="producto_menu">Funcion a ejecutar Producto</string>
    <string name="administrador_menu_insertar">Insertar Administrador</string>
    <string name="administrador_menu_actualizar">Actualizar Administrador</string>
    <string name="administrador_menu_consultar">Consultar Administrador</string>
    <string name="administrador_menu_eliminar">Eliminar Administrador</string>
    <string name="administrador_menu_insertarWS">Insertar Administrador WS</string>
    <string name="administrador_menu_consultarWS">Consultar Administrador WS</string>
    <string name="tienda_menu_insertar">Insertar Tienda</string>
    <string name="tienda_menu_actualizar">Actualizar Tienda</string>
    <string name="tienda_menu_consultar">Consultar Tienda</string>
    <string name="tienda_menu_eliminar">Eliminar Tienda</string>
    <string name="producto_menu_insertar">Insertar Producto</string>
    <string name="producto_menu_actualizar">Actualizar Producto</string>
    <string name="producto_menu_consultar">Consultar Producto</string>
    <string name="producto_menu_eliminar">Eliminar Producto</string>
    <string name="id_administradorAdmin">ID Admin:</string>
    <string name="nombresAdmin">Nombres:</string>
    <string name="apellidosAdmin">Apellidos:</string>
    <string name="telefonoAdmin">Telefono:</string>
    <string name="id_tiendaT">ID Tienda:</string>
    <string name="nombre_tiendaT">Nombre de la Tienda:</string>
    <string name="telefono_tiendaT">Telefono de la Tienda:</string>
    <string name="id_direccionT">ID Direccion:</string>
    <string name="id_adminT">ID Administrador a Cargo:</string>
    <string name="id_productoP">ID Producto:</string>
    <string name="nombre_productoP">Nombre Producto:</string>
    <string name="descripcion_productoP">Descripcion Producto:</string>
    <string name="precio_productoP">Precio Producto:</string>
    <string name="estado_productoP">Estado Producto:</string>
    <string name="Insertar">Insertar</string>
    <string name="Consultar">Consultar</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="AgregarProducto">+ Agregar Producto</string>
    <string name="CerrarPedido">Cerrar Pedido</string>
    <string name="Editar">Editar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="error">Error al insertar el registro. Registro Duplicado. Verificar inserción</string>
    <string name="vacio">Campos vacios</string>
    <string name="error4">Ocurrio algo inesperado en la DB</string>
    <string name="regInsertado">Registro insertado Nº= </string>
    <string name="regActualizado">Registro actualizado correctamente</string>
    <string name="regNoActualizado">Registro no se actualizo, revise sus campos</string>
    <string name="regEliminados">Filas afectadas = </string>
    <string name="regNoEliminados">FALLO al eliminar, existe una relacion con </string>
    <string name="referencia">Hay una referencia en otra tabla de</string>
    <string name="llenadoBD">Guardo correctamente</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="MenuFormaPago">Menu Tabla Forma de Pago</string>
    <string name="MenuPedido">Menu Tabla Pedido</string>
    <string name="MenuVenta">Menu Tabla Venta</string>
    <string name="InsertarFormaPago">Insertar Forma de Pago</string>
    <string name="ConsultarFormaPago">Consultar Forma de Pago</string>
    <string name="ActualizarFormaPago">Actualizar Forma de Pago</string>
    <string name="EliminarFormaPago">Eliminar Forma de Pago</string>
    <string name="InsertarPedido">Insertar Pedido</string>
    <string name="ConsultarPedido">Consultar Pedido</string>
    <string name="ActualizarPedido">Actualizar Pedido</string>
    <string name="EliminarPedido">Menu Pedido</string>
    <string name="InsertarVenta">Insertar Venta</string>
    <string name="ConsultarVenta">Consultar Venta</string>
    <string name="ActualizarVenta">Actualizar Venta</string>
    <string name="EliminarVenta">Eliminar Venta</string>
    <string name="TitleFormaPago">Forma de Pago</string>
    <string name="idFormaPago">ID Forma de Pago:</string>
    <string name="nomFormaPago">Forma de Pago:</string>
    <string name="ServicioFormaPago">Servicio Web Insertar Forma de Pago:</string>
    <string name="ServicioVerFormaPago">Servicio Web Ver los Tipos de Formas de Pago:</string>
    <string name="TitlePedido">Pedido</string>
    <string name="idPedido">ID Pedido:</string>
    <string name="idRepartidor">ID Repartidor:</string>
    <string name="idUsuario">ID Usuario:</string>
    <string name="Producto">Producto:</string>
    <string name="Cantidad">Cantidad:</string>
    <string name="TitleVenta">Venta</string>
    <string name="idVenta">ID Venta:</string>
    <string name="idDireccion">ID Dirección:</string>
    <string name="Monto">Monto:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora:</string>
    <string name="title_activity_Licencia_menu">LicenciaMenuActivity</string>
    <string name="title_activity_Repartidor_menu">RepartidorMenuActivity</string>
    <string name="title_activity_Vehiculo_menu">VehiculoMenuActivity</string>
    <string name="title_activity_Licencia_insertar">LicenciaInsertarActivity</string>
    <string name="title_activity_Licencia_eliminar">LicenciaEliminarActivity</string>
    <string name="title_activity_Licencia_actualizar">LicenciaActualizarActivity</string>
    <string name="title_activity_Licencia_consultar">LicenciaConsultarActivity</string>
    <string name="title_activity_Repartidor_insertar">RepartidorInsertarActivity</string>
    <string name="title_activity_Repartidor_eliminar">RepartidorEliminarActivity</string>
    <string name="title_activity_Repartidor_actualizar">RepartidorActualizarActivity</string>
    <string name="title_activity_Repartidor_consultar">RepartidorConsultarActivity</string>
    <string name="title_activity_Vehiculo_insertar">VehiculoInsertarActivity</string>
    <string name="title_activity_Vehiculo_eliminar">VehiculoEliminarActivity</string>
    <string name="title_activity_Vehiculo_actualizar">VehiculoActualizarActivity</string>
    <string name="title_activity_Vehiculo_consultar">VehiculoConsultarActivity</string>
    <string name="Licencia_menu">Función a Ejecutar Licencia</string>
    <string name="Repartidor_menu">Función a Ejecutar Repartidor</string>
    <string name="Vehiculo_menu">Función a Ejecutar Vehiculo</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="tipo_licencia">Tipo de licencia</string>
    <string name="numero_licencia">Numero de licencia</string>
    <string name="id_vehiculo">Vehiculo</string>
    <string name="id_licencia">Licencia</string>
    <string name="id_documento_identidad">idDocumento de identidad</string>
    <string name="nombre_repartidor">Nombre del repartidor</string>
    <string name="apellido_repartidor">Apellido del repartidor</string>
    <string name="telefono_repartidor">Telefono del repartidor</string>
    <string name="placa_vehiculo">Placa del vehiculo</string>
    <string name="tipo_vehiculo">Tipo de vehiculo</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar2">EliminarV2</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones</string>
    <string name="ingresar_id">Ingresar ID</string>
    <string name="ingresar_id_distrito">Ingresar ID Distrito</string>
    <string name="ingresar_direccion">ingresar_id_dirección</string>
    <string name="guardar">Guardar</string>
    <string name="seleccionar_tipo_direccion">Seleccionar tipo de dirección</string>
    <string name="tipo_direccion">Tipo de dirección</string>
    <string name="idDepartamento">idDepartamento:</string>
    <string name="TitleDepartamento">Departamento</string>
    <string name="nomDepartamento">Departamento:</string>
    <string name="idDistrito">idDistrito:</string>
    <string name="TitleDistrito">Distrito</string>
    <string name="nomDistrito">Distrito:</string>
    <string name="idMunicipio">idMunicipio:</string>
    <string name="TitleMunicipio">Municipio</string>
    <string name="nomMunicipio">Municipio:</string>
    <string name="idEventoEspecial">idEventoEspecial:</string>
    <string name="TitleEventoEspecial">Evento Especial</string>
    <string name="nomEventoEspecial">Evento Especial:</string>
    <string name="EventoEspecialMaximo">Monto Maximo:</string>
    <string name="EventoEspecialMinimo">Monto minimo:</string>
    <string-array name="tipos_direccion">
        <item>Casa</item>
        <item>Apartamento</item>
        <item>Oficina</item>
    </string-array>
    <string name="id_direccion">ID Dirección</string>
    <string name="eliminar_direccion">Eliminar Dirección</string>
    <string name="hint_id_documento_identidad">ID Documento Identidad</string>
    <string name="hint_tipo_documento_identidad">Tipo de Documento</string>
    <string name="hint_numero_documento_identidad">Número de Documento</string>
    <string name="id_usuario">ID Usuario</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="apellido_usuario">Apellido de Usuario</string>
    <string name="telefono_usuario">Teléfono de Usuario</string>
    <string name="insertar_usuario">Insertar Usuario</string>
    <string name="consultar_usuario">Consultar Usuario</string>
    <string name="id_usuario_hint">ID Usuario</string>
    <string name="btn_eliminar_text">Eliminar Usuario</string>
    <string name="id_direccion_hint">ID Dirección</string>
    <string name="id_documento_identidad_hint">ID Documento Identidad</string>
    <string name="nombre_usuario_hint">Nombre Usuario</string>
    <string name="apellido_usuario_hint">Apellido Usuario</string>
    <string name="telefono_usuario_hint">Teléfono Usuario</string>
    <string name="btn_insertar_text">Insertar Usuario</string>
    <string name="btn_limpiar_text">Limpiar</string>
</resources>