<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="direccion"/>

    <EditText
        android:id="@+id/edit_id_direccion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_direccion"
        android:inputType="text"
        android:maxLength="20"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vehiculo"/>

    <EditText
        android:id="@+id/edit_id_vehiculo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_vehiculo"
        android:inputType="text"
        android:maxLength="20"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="documento identidad" />

    <EditText
        android:id="@+id/edit_id_documento_identidad"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_documento_identidad"
        android:inputType="text"
        android:maxLength="20"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="licencia"  />

    <EditText
        android:id="@+id/edit_id_licencia"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_licencia"
        android:inputType="text"
        android:maxLength="20"
        android:minHeight="48dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/botonConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:onClick="consultarRepartidor"/>
        <Button
            android:id="@+id/botonLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiarTexto"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre del repartidor" />

    <EditText
        android:id="@+id/edit_nombre_repartidor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/nombre_repartidor"
        android:inputType="text"
        android:longClickable="false"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellido del repartidor" />

    <EditText
        android:id="@+id/edit_apellido_repartidor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/apellido_repartidor"
        android:inputType="text"
        android:longClickable="false"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telefono del repartidor" />

    <EditText
        android:id="@+id/edit_telefono_repartidor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/telefono_repartidor"
        android:inputType="text"
        android:longClickable="false"
        android:minHeight="48dp" />
</LinearLayout>