<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/idUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_usuario_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="eliminarUsuario"
        android:text="@string/btn_eliminar_text" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limpiarTexto"
        android:text="@string/btn_limpiar_text" />

</LinearLayout>
